deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laa-estimate-eligibility
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/set-identifier: laa-estimate-eligibility-laa-estimate-financial-eligibility-for-legal-aid-uat-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  tls:
  - hosts:
    - laa-estimate-eligibility-uat.apps.live.cloud-platform.service.justice.gov.uk
  rules:
  - host: laa-estimate-eligibility-uat.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: laa-estimate-eligibility-service
            port:
              number: 4567
